[package]
name = "firefly-io"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
anyhow = { version = "1.0.103", default-features = false }
cirque-pinnacle = "1.0.1"
critical-section = "1.2.0"
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = "0.3.0"
embedded-io = { version = "0.7.1", default-features = false }
esp-alloc = { version = "0.10.0" }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-radio = { version = "0.18.0", features = [
    "esp32s3",
    "esp-now",
    "unstable",
] }
esp-rtos = { version = "0.3.0", features = [
    "esp32s3",
    "esp-radio",
    "esp-alloc",
] }
esp-wifi-sys = { version = "0.8.1", features = ["esp32s3"] }
firefly-types = "0.10.0"
portable-atomic = "1.13.1"
smoltcp = { version = "0.13.1", default-features = false, features = [
    "proto-ipv4",
    "medium-ethernet",
    "alloc",
    "socket-tcp",
    "socket-dhcpv4",
] }

[features]
default = []
v1 = []
v2 = []

[profile.release]
strip = true             # Automatically strip symbols from the binary.
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"          # Optimize for speed.
overflow-checks = false
panic = "abort"
